--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -24,7 +24,7 @@
             <img src ="images/home_hero.jpg" alt = "Home hero img">
             <p>We are excited to announce our three Special Trips along the Colorado river for the 2023 summer season!</p>
             <form>
-                <input type="button" onclick="window.location.href='https://www.w3docs.com';" value="w3docs" />
+                <input type="button" onclick="window.location.href='//127.0.0.1:5500/wwr/contact.html' ; "value="Contact Us "/>
             </form>
         </article>
         <section>
@@ -33,7 +33,9 @@
             <div class="trips">
             <img src="images/calm_trip.png" alt="kids calm river trip">
             <p>This trip is meant for children aged 13 and under to gain rafting experience in a calm safe setting. They will learn the basics of rafting safety and procedure under the guidance of two of our specially trained staff members. </p>
-            <button>Book Now</button>
+            <form>
+                <input type="button" onclick="window.location.href='//127.0.0.1:5500/wwr/kids.html' ; "value="Learn More"/>
+            </form>
             </div>
         </section>
         <section>
@@ -42,16 +44,18 @@
             <div class="trips">
             <img src="images/family_trip.png" alt="family rafting trip">
             <p>This trip is perfect for families looking to experience nature together. We promise that by the end of this four hour rafting trip you and your family will leave feeling closer than ever. This trip Takes place on Level two waters making it enjoyable for the whole family. </p>
-            <button>Book Now</button>
+            <form>
+                <input type="button" onclick="window.location.href='//127.0.0.1:5500/wwr/family.html' ; "value="Learn More"/>
+            </form>
             </div>
         </section>
         <section>
-            <div class="camp">
             <h2>Level 3 Rafting Camp</h2>
             <img src="images/raft_camp.png" alt="teenager rafting camp">
             <p>We are excited to announce our 2 week long Rafting camp for teenagers. No experience required! We will begin our trip on level one waters teaching teenagers the importance of water and rafting safety. we will work our way down the river to Level 2 and Level 3 waters where the kids will have the chance to naturally build their rafting skills and confidence. We will camp along the river bank at night. The teenagers will be accompanied by 6 Well trained rafting instructors. </p>
-            <button>Book Now</button>
-            </div>
+            <form>
+                <input type="button" onclick="window.location.href='//127.0.0.1:5500/wwr/camp.html' ; "value="Learn More"/>
+            </form>
         </section>
     </main>
     <footer>
