--- a/wwr/camp.html
+++ b/wwr/camp.html
@@ -16,7 +16,7 @@
         <h1>Teenager Rafting Overnight Camp!</h1>
         <p>This is a great experience for your older kids aged 14-17! For two weeks they will go on a rafting expedition along the Colorado river. No experience is required. They will start out the first 2 days learning water safety on calm level 1 waters with our kids day camp program. After initial safety training is provided they will raft along the river to their camp location each night. We will provide three meals a day for the kids but, its not a bad idea for them to bring their own snacks! We have many returning teens who have made lasting friendships and love the camp. The total program fee is $750. Сontact us to apply!</p>
         <figure>
-            <img src="images/lead_marketing.png" alt="kids day camp 1">
+            <img src="images/teen_trip.png" alt="kids day camp 1">
             <figcaption>Rafting photo from the July 2022 season. </figcaption>
         </figure>
         <figure>
@@ -24,7 +24,7 @@
             <figcaption>View from tent from 2018 trip.</figcaption>
         </figure>
         <figure>
-            <img src="images/rafting_coordinator.png" alt="kids day camp 3">
-            <figcaption>Water Wonderland believes in fostering friendship!</figcaption>
+            <img src="images/skills_teen.png" alt="kids day camp 3">
+            <figcaption>Water Wonderland believes in teaching skills!</figcaption>
         </figure>
     </main>
