--- a/wwr/family.html
+++ b/wwr/family.html
@@ -16,15 +16,15 @@
         <h1>Family Rafting Experience !</h1>
         <p>The Family Rafting Experience is one that you will not forget! get ready for a four hour white water rafting expedition along the Colorado river. Families love seeing the beautiful red canyon around them as they raft level 2 waters with our experienced guides. This is an absolute must for your next family adventure! The total program fee is $250 for a family of four, with a $50 add on fee per person. Contact us to apply! </p>
         <figure>
-            <img src="images/lead_marketing.png" alt="kids day camp 1">
+            <img src="images/family_raft.png" alt="kids day camp 1">
             <figcaption> One of our returning families in the 2019 season.</figcaption>
         </figure>
         <figure>
-            <img src="images/lead_marketing.png" alt="kids day camp 2">
+            <img src="images/family_fun.png" alt="kids day camp 2">
             <figcaption>Rafting is fun for parents too!</figcaption>
         </figure>
         <figure>
-            <img src="images/rafting_coordinator.png" alt="kids day camp 3">
+            <img src="images/family_trip.png" alt="kids day camp 3">
             <figcaption>We are so lucky to look at this amazing landscape every day!</figcaption>
         </figure>
     </main>
