--- a/wwr/kids.html
+++ b/wwr/kids.html
@@ -16,15 +16,15 @@
         <h1>Kids Rafting Day Camp!</h1>
         <p>Kids rafting day camp is a great option for kids in the arizona area. Every weekend for the month of July we will host rafting days providing kids the opportunity to learn more about nature and rafting. This will be our tenth year hosting kids day camp! The total cost to enroll one child is $350. We also offer sibling discounts of $25 off per sibling. Contact us to apply! </p>
         <figure>
-            <img src="images/lead_marketing.png" alt="kids day camp 1">
-            <figcaption> Our wonderful certified instructor Hank.</figcaption>
+            <img src="images/intructor_kids.png" alt="kids day camp 1">
+            <figcaption> Our wonderful certified instructor Hank with the kids!</figcaption>
         </figure>
         <figure>
-            <img src="images/lead_marketing.png" alt="kids day camp 2">
-            <figcaption>Kids having fun!</figcaption>
+            <img src="images/rafting_kid.png" alt="kids day camp 2">
+            <figcaption>Our friend Daniel from last year having fun!</figcaption>
         </figure>
         <figure>
-            <img src="images/rafting_coordinator.png" alt="kids day camp 3">
+            <img src="images/river_kids.png" alt="kids day camp 3">
             <figcaption>These are the calm waters that we utilize to teach the kids safety skills.</figcaption>
         </figure>
     </main>
