--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -50,7 +50,7 @@
         </section>
         <section>
             <h2>Level 3 Rafting Camp</h2>
-            <img src="images/raft_camp.png" alt="teenager rafting camp">
+            <img src="images/colorado_river_camp.png" alt="teenager rafting camp">
             <p>We are excited to announce our 2 week long Rafting camp for teenagers. No experience required! We will begin our trip on level one waters teaching teenagers the importance of water and rafting safety. we will work our way down the river to Level 2 and Level 3 waters where the kids will have the chance to naturally build their rafting skills and confidence. We will camp along the river bank at night. The teenagers will be accompanied by 6 Well trained rafting instructors. </p>
             <form>
                 <input type="button" onclick="window.location.href='//127.0.0.1:5500/wwr/camp.html' ; "value="Learn More"/>
