--- a/wwr/index.html
+++ b/wwr/index.html
@@ -29,6 +29,7 @@
         </article>
     </div>
         <section>
+            <div class ="section_h2">
             <h2>Sign Up Now!</h2>
             <form action="submit.php" method="post">
                     <label for="name">Name:</label>
@@ -41,6 +42,7 @@
                 <input type="submit" value="submit">
 
             </form>
+            </div>
         </section>
         <section>
             <h2>Impact</h2>
