--- a/wwr/index.html
+++ b/wwr/index.html
@@ -70,8 +70,7 @@
         <a href="https://instagram.com">
             <img src="images/instagram.png" alt="Instagram Icon">
         </a>
-    
-        <!-- </nav>   -->
+        <img src="images/home_wireframe.png">
     </footer>
 </body>
 </html>
