--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -54,48 +54,48 @@
             </form>
         </div>
         <div>
-            <h2>Fun trip!</h2>
+            <h2>Employee Rafting Day</h2>
             <img src="images/rafting_trip4.jpg" alt="family rafting trip">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum id temporibus accusamus quam, dignissimos laborum, eius nihil sint quasi, dolore inventore dicta consequuntur nostrum reiciendis. Provident quod dignissimos optio perferendis?</p>
+            <p>Every year our company takes the opportunity to thank our employees by bringing them on an annual rafting trip through the Colorado river we appreciate our employees!</p>
         </div>
         <div class="link">
-            <a href="./contact.html">Link</a>
+            <a href="./contact.html">Contact US</a>
         </div>
         <table>
             <tr>
-              <th>Company</th>
-              <th>Contact</th>
-              <th>Country</th>
+              <th>Department</th>
+              <th>Email</th>
+              <th>Phone Number</th>
             </tr>
             <tr>
-              <td>Alfreds Futterkiste</td>
-              <td>Maria Anders</td>
-              <td>Germany</td>
+              <td>Payment Issues</td>
+              <td>maria4353@gmail.com</td>
+              <td>(509)678-9843</td>
             </tr>
             <tr>
-              <td>Centro comercial Moctezuma</td>
-              <td>Francisco Chang</td>
-              <td>Mexico</td>
+              <td>Marketing</td>
+              <td>francis3432@gmail.com</td>
+              <td>(509)675-4385</td>
             </tr>
             <tr>
-              <td>Ernst Handel</td>
-              <td>Roland Mendel</td>
-              <td>Austria</td>
+              <td>Media</td>
+              <td>roland5738@gmail.com</td>
+              <td>(509)876-8943</td>
             </tr>
             <tr>
-              <td>Island Trading</td>
-              <td>Helen Bennett</td>
-              <td>UK</td>
+              <td>Photography</td>
+              <td>helene2322@gmail.com</td>
+              <td>(509)564-4224</td>
             </tr>
             <tr>
-              <td>Laughing Bacchus Winecellars</td>
-              <td>Yoshi Tannamuri</td>
-              <td>Canada</td>
+              <td>Merchandising</td>
+              <td>grace4998@gmail.com</td>
+              <td>(509)342-8743</td>
             </tr>
             <tr>
-              <td>Magazzini Alimentari Riuniti</td>
-              <td>Giovanni Rovelli</td>
-              <td>Italy</td>
+              <td>Cancellations</td>
+              <td>liane2142@gmail.com</td>
+              <td>(509)242-5432</td>
             </tr>
           </table>
           
@@ -113,6 +113,8 @@
         </a>
         <a href="https://instagram.com">
             <img src="images/instagram.png" alt="Instagram Icon">
+        </a>
+        <img src="images/trips_wireframe.png" alt="trips wire frame">
         </a>
     
         <!-- </nav>   -->
