--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -83,6 +83,7 @@
         <a href="https://instagram.com">
             <img src="images/instagram.png" alt="Instagram Icon">
         </a>
+        <img src="images/contacts_wireframe.png" alt="contact wire frame">
     
         <!-- </nav>   -->
     </footer>
