--- a/wwr/index.html
+++ b/wwr/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home ⎮ Hayli Sanders</title>
+    <title>Home ⎮ Water Wonderland</title>
     <meta name="description" content="white water rafting, Arizona Rafting, Rafting home page">
     <meta name="author" content="Hayli Sanders">
     <link rel="stylesheet" href="styles/rafting.css">
@@ -12,7 +12,7 @@
     <header>
         <img src="images/logo.jpeg" alt="Rafting Site Logo">
         <nav>
-            <a href="index.html">Index</a> <!--can i change this to say home page?-->
+            <a href="index.html">Index</a>
             <a href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
             <a href="contact.html">Contact</a>
@@ -39,18 +39,18 @@
                     <input type="email" id="email" name="email" required>
                     <input type="checkbox" id="newsletter" name="newsletter">
                 <label for="newsletter">Please subscribe me to the monthly newsletter</label>
-                <input type="submit" value="submit">
+                <input type="Submit" value="Submit Here">
 
             </form>
         </div>
         <div id="div1">
             <h2>Impact</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae, dolorum.</p>
+            <p>We believe that getting children into nature is the most important. Research shows that involving children in nature significantly increases their self confidence and independence. We know that our program can provide a positive impact to families and children!</p>
             <img src="images/nature_child.jpg" alt="Child in nature">
         </div>
         <div id="div2">
             <h2>Testimonial</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae, dolorum.</p>
+            <p>Kelley Creed - "Sending my daughter to Water Wonderland was one of the best choices I have ever made. Seeing her come out of hte program with increased independence and love for nature was a huge blessing for our family. Next year we will sign both of our children up for the program. They can not wait! "</p>
             <img src="./images/rsz_testimonial.jpg" alt="Children on Raft">
         </div>
         
